<resources>
    <string name="app_name">TaxiApp</string>
    <string name="title_activity_maps">Map</string>
    <string name="server_status">Сервер:</string>
    <string name="connection_status">Конекција:</string>
    <string name="logged_driver">Возач:</string>
    <string name="login">Најава</string>
    <string name="login_error1">Внесовте погрешен код! Обидете се повторно!</string>
    <string name="login_error2">Мора да има интернет конекција и вклучени локациски сервиси за да се најавите!</string>
    <string name="gps_status">GPS</string>
    <string name="confirm">Потврди</string>
    <string name="vehicle_status">Статус:</string>
    <string name="no_offers">Нема најави!</string>
    <string name="no_messages">Нема пораки!</string>
    <string name="send">Испрати</string>
    <string name="cancel">Откажи</string>
    <string name="already_logged_in">Веќе сте најавени.</string>
    <string name="rf_card_error">Бројот на Rf картичката мора да е со должина 4.</string>
    <string name="device_id_error">Бројот на уредот мора да е со должина 5.</string>
    <string name="configuration_success">Успешна конфигурација!</string>
    <string name="override_prev_configuration">Уредот е веќе конфигуриран. Внесување нови вредности ќе ги препокрие старите.</string>
    <string name="minutes">Минути</string>
    <string name="enter_text">Внесете текст:</string>
    <string name="enter_region">Внесете регион:</string>
    <string name="enter_minutes">Внесете минути:</string>
    <string name="error_enter_text">Мора да внесете текст!</string>
    <string name="error_enter_region">Мора да внесете регион!</string>
    <string name="error_enter_minutes">Мора да внесете минути!</string>
    <string name="error_enter_device_id">Мора да внесете бр. на уред!</string>
    <string name="active_long_offer">Активна долга најава!</string>
    <string name="number_of_offers">Број на најави: %d</string>
    <string name="number_of_messages">Број на пораки: %d</string>
    <string name="timer_zero">00:00</string>
    <string name="move_to_client">Кон клиент:</string>
    <string name="waiting">Чекање:</string>
    <string name="location_permissions_needed">PLEASE GIVE PERMISSION TO USE FINE LOCATION</string>
    <string name="no_info">No info</string>
    <string name="error_no_config_found">Уредот не е конфигуриран! Направете конфигурација пред да се логирате!</string>
    <string name="error_wrong_config_code">Погрешен код за конфигурација!</string>
    <string name="error_reading_full_message">Проблем при вчитувањето на пораката!</string>
    <string name="full_message">Целосна порака</string>
    <string name="close">Затвори</string>
    <string name="android">Андроид</string>
    <string name="system">Систем</string>
    <string name="dispatcher">Диспечер</string>
    <string name="dest_dispatcher">До: Диспечер</string>
    <string name="dest_android">До: Android</string>
    <string name="message">Порака:</string>
    <string name="client_taken">Земав патник</string>
    <string name="client_dropped_off">Оставив патник</string>
    <string name="logout">Одјава</string>
    <string name="pause">Пауза</string>
    <string name="pause_end">Крај на пауза</string>
    <string name="messages">Пораки</string>
    <string name="offers">Најави</string>
    <string name="register_for_region">Пријава за регион</string>
    <string name="request_status">Барање статус</string>
    <string name="info_by_region">Инфо по региони</string>
    <string name="generated_messages">Генерирани пораки</string>
    <string name="setup">Подесување</string>
    <string name="driver_number">Број на возач:</string>
    <string name="device_id">Број на уред:</string>
    <string name="display_on_map">Прикажи на мапа</string>
    <string name="confirmation_code">Код за потврда:</string>
    <string name="confirm_logout">Дали сакате да се одјавите?</string>
    <string name="yes">Да</string>
    <string name="no">Не</string>
    <string name="must_be_logged_in">Мора да сте најавени за оваа акција!</string>
    <string name="delete">Избриши</string>
    <string name="error_sending_message">Проблем при праќањето на пораката. Обидете се повторно.</string>
    <string name="exit">Излез</string>
    <string name="confirm_exit">Дали сакате да излезете од апликацијата?</string>
    <string name="map">Мапа</string>
    <string name="no_logged_driver">Нема најавен возач</string>
    <string name="dont_play_with_the_card">(Ne igraj so kartickata !)</string>
    <string name="state">State</string>
    <string name="configuration">Configuration</string>
    <string name="waiting_response">Чекање одговор...</string>
    <string name="invalid_card">Nevalidna karticka</string>
    <string name="invalid_card_mk">Невалидна картичка!</string>
    <string name="checking_card">Проверка на картичка</string>
    <string name="check_card">Провери картичка</string>
    <string name="cannot_check_card">Не може да направите проверка во оваа состојба!</string>
    <string name="ok">ОК</string>
    <string name="discount">Попуст</string>
    <string name="confirm_discount">Дали давате попуст?</string>
    <string name="region">Регион</string>
</resources>
