<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:text="@string/login_button_text"
            android:onClick="showLoginFragment"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:text="@string/client_taken"
            android:onClick="clientArrived"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:text="@string/client_dropped_off"
            android:onClick="clientLeft"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:text="@string/logout"
            android:onClick="sendLogoutMessage"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:text="@string/pause"
            android:onClick="sendPauseStartMessage"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:text="@string/pause_end"
            android:onClick="sendPauseStopMessage"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:text="@string/messages"
            android:onClick="showMessagesFragment"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:text="@string/offers"
            android:onClick="showOffersFragment"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:text="@string/register_for_region"
            android:onClick="registerForRegion"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:text="@string/request_status"
            android:onClick="requestStatus"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:text="@string/info_by_region"
            android:onClick="getInfoByRegion"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:text="@string/generated_messages"
            android:onClick="showGeneratedMessagesFragment"/>

    </LinearLayout>
</ScrollView>